# selene

./: .codecov.yml  .coveragerc  .gitignore  .pylint-disabled-rules  .pylintrc  .travis.yml  .upload_reports.sh  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  Pipfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  todo.md  tox.ini  travis_pypi_setup.py  versions.md
.github/: FUNDING.yml
.github/workflows/: black.yml  deploy-mkdocs-poetry.yml  linters.yml  publish.yml  tests.yml  traffic2badge.yml
.run/: build.sh  bump_build_publish.sh  bump_version.sh  bump_version_and_publish.sh  check_release_version.py  get_lock_version.py  lint_black.sh  lint_mypy.sh  lint_pycodestyle.sh  lint_pylint.sh  publish.sh  serve_docs.sh
core/: delegation.py
docs/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  conf.py  conf.py~  index.md  index.rst  index.rst~  license.md  make.bat  selene-cheetsheet-howto.md  selene-for-page-objects-guide.md  selene-in-action-tutorial.md  selene-quick-start-tutorial.md  warn-from-next-release.md
docs/_templates/: sidebarintro.html
docs/contribution/: code-conventions-guide.md  documentation-for-project-tutorial.md  how-to-organize-docs-guide.md  how-to-organize-docs.guide.md  how-to-write-docs-guide.md  index.md  release-workflow-guide.md  to-documentation-guide.md  to-documentation.guide.md  to-source-code-guide.md  to-source-code.guide.md
docs/faq/: adding-chrome-extension-howto.md  clipboard-copy-and-paste-howto.md  comparison-with-other-frameworks-guide.md  custom-test-id-selectors-howto.md  custom-user-profile-howto.md  extending-selene-howto.md  iframes-howto.md  index.md  shadow-dom-howto.md
docs/reference/: command.md  condition.md  configuration.md  exceptions.md  index.md  match.md  query.md
docs/use-cases/: shwetchan20-basic-button-example.md
examples/: custom_conditions.py  hard_wait_before_command.py  log_all_selene_commands_with_wait.py  pre_pause_in_wait_with_sleep.py  select_from_table.py  sleep_before_wait_starts.py  test_hard_wait_example.py
examples/run_cross_platform/: .env.example  project.py
examples/run_cross_platform_android_ios/: README.md  project.py
examples/run_local_android_app_with_options_for_appium/: test_wikipedia.py
examples/run_local_android_chrome_with_options_for_appium/: test_todomvc.py
examples/run_local_in_chrome_with_options_for_headless/: test_todomvc.py
examples/run_local_in_default_chrome/: test_todomvc.py
examples/run_local_in_firefox_via_set_config_driver_options/: test_todomvc.py
examples/run_local_in_firefox_via_set_config_name/: test_ecosia.py  test_todomvc.py
examples/run_local_in_safari_via_set_config_driver/: test_todomvc.py
examples/run_remote_in_android_app_with_options_for_browserstack/: test_wikipedia.py
examples/run_remote_in_android_chrome_with_options_for_browserstack/: test_todomvc.py
examples/run_remote_in_chrome_with_options_for_selenoid/: test_todomvc.py
examples/run_remote_in_ios_safari_with_options_for_browserstack/: test_todomvc.py
examples/run_remote_in_web_chrome_with_options_for_selenoid/: test_todomvc.py
examples/waits/: hard_wait_then_wait_example.py
mytests/: mytest-1.py
selene/: __init__.py  _managed.py  browser.py  browsers.py  bys.py  collection.py  command.py  condition.py  condition_helpers.py  conditions.py  config.py  driver.py  element.py  elements.py  entity.py  environment.py  exceptions.py  factory.py  helpers.py  locators.py  managed.py  match.py  page_object.py  query.py  selene_driver.py  tools.py  version.py  wait.py  waits.py  widgets.py
selene/abctypes/: conditions.py  locators.py  search_context.py  webdriver.py  webelement.py
selene/api/: __init__.py
selene/common/: __init__.py  _protocol.py  _typing_functions.py  appium_tools.py  delegation.py  fp.py  helpers.py  none_object.py  predicate.py
selene/core/: __driver_context.py  __init__.py  _actions.py  _browser.py  _browser.pyi  _client.py  _context.py  _element.py  _elements.py  _elements_context.py  _entity.py  command.py  condition.py  conditions.py  configuration.py  configuration.pyi  entity.py  entity.pyi  exceptions.py  locator.py  match.py  query.py  wait.py
selene/new/: browser.py  collection.py  command.py  condition.py  config.py  element.py  entity.py  locator.py  locators.py  match.py  query.py  wait.py
selene/support/: __init__.py  _logging.py  _pom.py  _wait.py  by.py  jquery_style_selectors.py  webdriver.py
selene/web/: __init__.py  _client.py  _context.py  _context.pyi  _element.py  _elements.py  _elements.pyi
selene4/: bys.py  conditions.py  config.py  elements.py  tools.py  wait.py
tests/: base4_test.py  base_test.py  basic_acceptance_test.py  bys_deprecated_test.py  bys_test.py  conditions_test.py  conftest.py  const.py  elements_test.py  helpers.py  pageobject_acceptance_test.py  selene_demo_todomvc_test.py  selene_straightforward_demo_todomvc_test.py  straightforward_acceptance_test.py  test_bys.py  test_conditions.py  test_python_version.py  test_python_version_fail.py  todomvc_acceptance_test.py  tools_visit_test.py  waits_test.py
tests/_support/: helpers.py
tests/acceptance/: acceptance_straightforward_test.py  acceptance_with_helpers_test.py  bys_test.py  condition_stack_trace.py  driver_management_test.py  selement_inner_search_test.py  selement_test.py  selements_collection_test.py  selene_collection_should_test.py  selene_element_inner_search_should_test.py  selene_element_test.py  selene_page_factory.py  selene_page_factory_test.py  speed_comparison_of_simple_element_actions_test.py  speed_comparison_of_typing_and_submit_actions_test.py  test_ecosia.py  test_search.py
tests/adhoc/: __init__.py  straightforward_style_test.py  test_anything.py  test_logging.py  test_logging_outer_html.py  test_shared_config_base_url.py
tests_from_past/: base_test.py  test_bys.py  test_conditions.py
traffic-selene/: traffic_clones.json  traffic_clones_per_week.json  traffic_paths.json  traffic_referrers.json  traffic_views.json  traffic_views_per_week.json
(+440 files in other folders)
