[tool.poetry]
name = "selene"
version = "2.0.0rc9"
description = "User-oriented browser tests in Python (Selenide port)"
authors = ["Iakiv Kramarenko <yashaka@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "testing",
    "selenium",
    "selenide",
    "browser",
    "pageobject",
    "widget",
    "wrapper"
]
homepage = "https://yashaka.github.io/selene/"
repository = "https://github.com/yashaka/selene/"
documentation = "https://yashaka.github.io/selene/"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
packages = [
    {include = "selene"},
    {include = "selene/api"},
    {include = "selene/common"},
    {include = "selene/core"},
    {include = "selene/support"},
    {include = "selene/support/shared"},
    {include = "selene/support/conditions"},
    {include = "selene/py.typed"}
]

[tool.poetry.urls]
Changelog = "https://github.com/yashaka/selene/releases"

[tool.poetry.dependencies]
python = ">=3.9"
selenium = ">=4.12.0"
pyperclip = "^1.9.0"
future = "*"
typing-extensions = ">=4.12.2"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
pycodestyle = "*"
pylint = "^3.2.2"
pytest = "*"
pytest-cov = "*"
codecov = "*"
mypy = "*"
pydantic = "^1.10.7"
python-dotenv = "0.21.1"
Appium-Python-Client = "^4.2.0"
setuptools = "^70.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocstrings = "0.26.1"
mkdocstrings-python = "1.11.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.6"
mkdocs-redirects = "^1.2.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-include-markdown-plugin = "^6.1.1"
mkdocs-macros-plugin = "^1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
follow_untyped_imports = true
disable_error_code = 'annotation-unchecked'
allow_redefinition = true  # TODO: how to properly make it work o_O ?
color_output=1
exclude = [
    '^test_.+\.py$',
    '^.+_test\.py$',
]


[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = 1

[tool.pylint]
    [tool.pylint.master]
    ignore=['CVS']
    jobs=1
    persistent=['yes']
    unsafe-load-any-extension=['no']
    suggestion-mode=['yes']
    fail-under=['10.0']

    [tool.pylint.'MESSAGES CONTROL']
    enable=['c-extension-no-member']
    disable=['''no-else-return,
        import-outside-toplevel,
        too-many-locals,
        too-many-lines,
        too-many-branches,
        invalid-name,
        not-callable,
        unused-argument,
        protected-access,
        pointless-string-statement,
        too-few-public-methods,
        too-many-public-methods,
        redefined-outer-name,
        missing-class-docstring,
        missing-module-docstring,
        missing-function-docstring,
        no-else-raise,
        raw-checker-failed,
        bad-inline-option,
        locally-disabled,
        file-ignored,
        suppressed-message,
        useless-suppression,
        deprecated-pragma,
        use-symbolic-message-instead,
        typevar-name-incorrect-variance,
        anomalous-backslash-in-string,
        too-many-statements,
        use-dict-literal,
        attribute-defined-outside-init,
        too-many-return-statements''']
    [tool.pylint.'REPORTS']
    evaluation=['10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)']
    output-format=['colorized']
    reports=['yes']
    score=['yes']

    [tool.pylint.'REFACTORING']
    max-nested-blocks=5
    never-returning-functions=['sys.exit']

    [tool.pylint.'LOGGING']
    logging-format-style=['old']
    logging-modules=['logging']

    [tool.pylint.'SPELLING']
    max-spelling-suggestions=4
    spelling-store-unknown-words=['no']

    [tool.pylint.'MISCELLANEOUS']
    notes=['FIXME,XXX']

    [tool.pylint.'TYPECHECK']
    contextmanager-decorators=['contextlib.contextmanager']
    ignore-mixin-members=['yes']
    ignore-none=['yes']
    ignore-on-opaque-inference=['yes']
    ignored-classes=['optparse.Values,thread._local,_thread._local']
    missing-member-hint=['yes']
    missing-member-hint-distance=1
    missing-member-max-choices=1

    [tool.pylint.'VARIABLES']
    allow-global-unused-variables=['yes']
    callbacks=['cb_,_cb']
    dummy-variables-rgx=['_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_']
    ignored-argument-names=['_.*|^ignored_|^unused_']
    init-import=['no']
    redefining-builtins-modules=['six.moves,past.builtins,future.builtins,builtins,io']

    [tool.pylint.'FORMAT']
    ignore-long-lines=['^\s*(# )?<?https?://\S+>?$']
    indent-after-paren=4
    indent-string='    '
    max-line-length=88
    max-module-lines=1000
    single-line-class-stmt=['no']
    single-line-if-stmt=['no']

    [tool.pylint.'SIMILARITIES']
    ignore-comments=['yes']
    ignore-docstrings=['yes']
    ignore-imports=['no']
    min-similarity-lines=4

    [tool.pylint.'BASIC']
    argument-naming-style=['snake_case']
    attr-naming-style=['snake_case']
    bad-names=['foo,bar,baz,toto,tutu,tata']
    class-attribute-naming-style=['any']
    class-naming-style=['PascalCase']
    const-naming-style=['UPPER_CASE']
    docstring-min-length=-1
    function-naming-style=['snake_case']
    good-names=['i,j,k,ex,Run,_']
    include-naming-hint=['no']
    inlinevar-naming-style=['any']
    method-naming-style=['snake_case']
    module-naming-style=['snake_case']
    no-docstring-rgx=['^_']
    property-classes=['abc.abstractproperty']
    variable-naming-style=['snake_case']

    [tool.pylint.'STRING']
    check-quote-consistency=['no']
    check-str-concat-over-line-jumps=['no']

    [tool.pylint.'IMPORTS']
    allow-wildcard-with-all=['no']
    analyse-fallback-blocks=['no']
    deprecated-modules=['optparse,tkinter.tix']
    known-third-party=['enchant']

    [tool.pylint.'CLASSES']
    defining-attr-methods=['__init__,__new__,setUp,__post_init__']
    valid-classmethod-first-arg=['cls']
    valid-metaclass-classmethod-first-arg=['cls']

    [tool.pylint.'DESIGN']
    max-args=5
    max-attributes=7
    max-bool-expr=5
    max-branches=12
    max-locals=15
    max-parents=7
    max-public-methods=20
    max-returns=6
    max-statements=80
    min-public-methods=2

    [tool.pylint.'EXCEPTIONS']
    overgeneral-exceptions=['builtins.BaseException', 'builtints.Exception']
