[metadata]
description-file = README.md

[bumpversion]
current_version = 1.0.0a11
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<stage>\D*)(?P<stageno>\d*)
serialize =
  {major}.{minor}.{patch}{stage}{stageno}
  {major}.{minor}.{patch}

[bumpversion:part:stage]
optional_value = release
values =
  a
  b
  release

[bumpversion:file:selene/version.py]
search = VERSION = '{current_version}'
replace = VERSION = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest
